--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@ a {
 :root {
   --main-bg-color: #222831;
   --main-font-color: rgba(238, 238, 238, 0.75);
-  --accent-color: #00ADB5;
+  --accent-color: #00adb5;
   --light-color: #fff;
   --dark-color: rgba(57, 62, 70, 0.75);
-  --border-color: rgba(238, 238, 238, 0.10);
+  --border-color: rgba(238, 238, 238, 0.1);
+  --btn-color: rgba(57, 62, 70, 0.50);
 }
 
 body {
@@ -46,7 +47,7 @@ header {
 
 .header__top {
   display: flex;
-  flex-wrap: wrap;;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: 48px 0;
@@ -85,12 +86,12 @@ header {
 
 .header__logo-link,
 .header__nav-link {
-  transition: all .8s;
+  transition: all 0.8s;
 }
 
 .header__logo-link:hover,
 .header__nav-link:hover {
-  opacity: .6;
+  opacity: 0.6;
   cursor: pointer;
 }
 
@@ -119,13 +120,13 @@ header {
   padding: 10px 32px;
   border-radius: 24px;
   margin-right: 24px;
-  transition: all .8s;
+  transition: all 0.8s;
   margin-top: 48px;
 }
 
 .about__link-find:hover {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
-  opacity: .6;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  opacity: 0.6;
 }
 
 .about__link-cv {
@@ -141,12 +142,12 @@ header {
   font-weight: 700;
   line-height: normal;
   padding: 10px 32px;
-  transition: all .8s;
+  transition: all 0.8s;
 }
 
 .about__link-cv:hover {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
-  opacity: .7;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  opacity: 0.7;
 }
 
 .about__link-img {
@@ -168,7 +169,7 @@ header {
 
 .about__title::before {
   position: absolute;
-  content: '';
+  content: "";
   background-repeat: no-repeat;
   left: -85px;
   bottom: -85px;
@@ -199,9 +200,9 @@ header {
 .bio {
   background-image: url(../img/bg__bio.svg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 36%;
   background-position-x: right;
-  background-position-y: bottom;
+  background-position-y: top;
   padding-bottom: 300px;
 }
 
@@ -217,7 +218,7 @@ header {
 }
 
 .bio__title::after {
-  content: '';
+  content: "";
   position: absolute;
   background-image: url(../img/music__bio.svg);
   background-repeat: no-repeat;
@@ -228,7 +229,7 @@ header {
 }
 
 .bio__title::before {
-  content: '';
+  content: "";
   position: absolute;
   background-image: url(../img/lightbulb.svg);
   background-repeat: no-repeat;
@@ -245,7 +246,7 @@ header {
 }
 
 .bio__info::before {
-  content: '';
+  content: "";
   position: absolute;
   background-image: url(../img/arrrow__bio.svg);
   background-repeat: no-repeat;
@@ -253,4 +254,84 @@ header {
   height: 186.886px;
   bottom: -280px;
   left: 238px;
+}
+
+.work {
+  background-image: url(../img/bg__work.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 270px 0;
+}
+
+.works__title {
+  color: var(--light-color);
+  font-size: 3.6em;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 15px;
+}
+
+.works__title-decoration {
+  color: var(--accent-color);
+}
+
+.works__disc {
+  text-align: justify;
+  background-color: var(--border-color);
+  padding: 20px;
+  margin-bottom: 45px;
+  position: relative;
+}
+
+.works__disc::before {
+  position: absolute;
+  content: "";
+  background-repeat: no-repeat;
+  left: -85px;
+  bottom: -85px;
+  width: 89.962px;
+  height: 221.69px;
+  background-image: url(../img/arrow__work.svg);
+}
+
+.works__dics-decoration {
+  color: var(--accent-color);
+}
+
+.work__btn {
+  color: var(--light-color);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 10px 32px;
+  border: none;
+  outline: none;
+  border-radius: 24px;
+  cursor: pointer;
+  background: var(--btn-color);
+}
+
+.work__btn.active {
+  background-color: var(--accent-color);
+}
+
+.works__container {
+  padding-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0 48px;
+}
+
+.works__container-element {
+  background-color: var(--btn-color);
+  padding: 61px;
+}
+
+.works__container-title {
+  color: var(--light-color);
+  padding-bottom: 25px;
+  text-align: center;
 }
