--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a {
   --light-color: #fff;
   --dark-color: rgba(57, 62, 70, 0.75);
   --border-color: rgba(238, 238, 238, 0.1);
-  --btn-color: rgba(57, 62, 70, 0.50);
+  --btn-color: rgba(57, 62, 70, 0.5);
 }
 
 body {
@@ -301,7 +301,7 @@ header {
 
 .work__btn {
   color: var(--light-color);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
   font-size: 1em;
   font-style: normal;
   font-weight: 700;
@@ -334,4 +334,63 @@ header {
   color: var(--light-color);
   padding-bottom: 25px;
   text-align: center;
+}
+
+.skills__tiltle,
+.footer__title {
+  color: var(--light-color);
+  font-size: 3.6em;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.skilss__disc {
+  padding: 25px 0;
+  color: var(--light-color);
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.skills__info {
+  width: 100%;
+  height: 20px;
+  background-color: var(--btn-color);
+}
+
+.skills__info-elm {
+  background-color: var(--accent-color);
+  width: 70%;
+  height: 20px;
+}
+
+.skills {
+  padding: 150px 0;
+}
+
+.footer__title {
+  font-size: 2em;
+}
+
+.footer__list {
+  padding-top: 45px;
+  display: flex;
+  grid-gap: 0 48px;
+  justify-content: center;
+  padding-bottom: 45px;
+}
+
+.footer__list-item {
+  list-style: none;
+}
+
+.footer__list-link {
+  color: var(--light-color);
+  transition: all .8s;
+}
+
+.footer__list-link:hover {
+  color: var(--accent-color);
 }
