--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 *,
-*::after,
-*::before {
+::after,
+::before {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 html {
@@ -29,7 +29,7 @@ body {
   background-color: var(--main-bg-color);
   display: flex;
   flex-direction: column;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   justify-content: space-between;
   min-height: 100vh;
   color: var(--main-font-color);
@@ -46,8 +46,8 @@ header {
 
 .container {
   max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 96px;
+  margin: 0px auto;
+  padding: 0px 96px;
 }
 
 .header__top {
@@ -55,7 +55,7 @@ header {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 48px 0;
+  padding: 48px 0px;
 }
 
 .header__theme-icon {
@@ -69,7 +69,7 @@ header {
 
 .header__nav-list {
   display: flex;
-  grid-gap: 0 48px;
+  gap: 0px 48px;
 }
 
 .header__nav-item {
@@ -91,7 +91,7 @@ header {
 
 .header__logo-link,
 .header__nav-link {
-  transition: all 0.8s;
+  transition: all 0.8s ease 0s;
 }
 
 .header__logo-link:hover,
@@ -99,11 +99,13 @@ header {
   opacity: 0.6;
   cursor: pointer;
 }
+
 .about__title {
   padding-top: 150px;
 }
+
 .about__title,
-.about__title-decoration  {
+.about__title-decoration {
   padding-top: 150px;
   max-width: 720px;
   color: var(--light-color);
@@ -111,12 +113,12 @@ header {
   font-size: 3.6em;
   font-style: normal;
   font-weight: 700;
-  line-height: 96px; /* 150% */
+  line-height: 96px;
 }
 
 .about__title-decoration {
   color: var(--accent-color);
-  padding: 0;
+  padding: 0px;
 }
 
 .about__link-find {
@@ -129,18 +131,18 @@ header {
   padding: 10px 32px;
   border-radius: 24px;
   margin-right: 24px;
-  transition: all 0.8s;
+  transition: all 0.8s ease 0s;
   margin-top: 48px;
 }
 
 .about__link-find:hover {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 4px 4px;
   opacity: 0.6;
 }
 
 .about__link-cv {
   display: inline-flex;
-  grid-gap: 0 15px;
+  gap: 0px 15px;
   align-items: center;
   border-radius: 24px;
   background-color: var(--dark-color);
@@ -151,11 +153,11 @@ header {
   font-weight: 700;
   line-height: normal;
   padding: 10px 32px;
-  transition: all 0.8s;
+  transition: all 0.8s ease 0s;
 }
 
 .about__link-cv:hover {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 4px 4px;
   opacity: 0.7;
 }
 
@@ -165,11 +167,10 @@ header {
 
 .about {
   padding-left: 85px;
-  background-image: url(../img/bg__about.svg);
+  background-image: url("../img/bg__about.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  background-position-x: right;
-  background-position-y: bottom;
+  background-position: 100% 100%;
 }
 
 .about__title {
@@ -179,14 +180,14 @@ header {
 .about__title::before {
   position: absolute;
   opacity: 0.05;
-  transition: opacity 2s; /* Длительность и тип анимации */
+  transition: opacity 2s ease 0s;
   content: "";
   background-repeat: no-repeat;
   left: -85px;
   bottom: -85px;
   width: 89.962px;
   height: 221.69px;
-  background-image: url(../img/arrow.svg);
+  background-image: url("../img/arrow.svg");
 }
 
 .about__link {
@@ -209,25 +210,25 @@ header {
 }
 
 .jump {
-  animation: jumpAnimation 0.5s infinite alternate;
+  animation: 0.5s ease 0s infinite alternate none running jumpAnimation;
 }
 
 @keyframes jumpAnimation {
   0%,
   100% {
-    transform: translateY(0);
+    transform: translateY(0px);
   }
+
   50% {
     transform: translateY(-20px);
   }
 }
 
 .bio {
-  background-image: url(../img/bg__bio.svg);
+  background-image: url("../img/bg__bio.svg");
   background-repeat: no-repeat;
   background-size: 36%;
-  background-position-x: right;
-  background-position-y: top;
+  background-position: 100% 0%;
   padding-bottom: 300px;
 }
 
@@ -245,18 +246,18 @@ header {
 .bio__title::after {
   content: "";
   position: absolute;
-  background-image: url(../img/music__bio.svg);
+  background-image: url("../img/music__bio.svg");
   background-repeat: no-repeat;
   width: 61.543px;
   height: 46.573px;
-  left: 0;
+  left: 0px;
   top: -75px;
 }
 
 .bio__title::before {
   content: "";
   position: absolute;
-  background-image: url(../img/lightbulb.svg);
+  background-image: url("../img/lightbulb.svg");
   background-repeat: no-repeat;
   width: 80px;
   height: 120px;
@@ -273,7 +274,7 @@ header {
 .bio__info::before {
   content: "";
   position: absolute;
-  background-image: url(../img/arrrow__bio.svg);
+  background-image: url("../img/arrrow__bio.svg");
   background-repeat: no-repeat;
   width: 167.721px;
   height: 186.886px;
@@ -282,10 +283,10 @@ header {
 }
 
 .work {
-  background-image: url(../img/bg__work.png);
+  background-image: url("../img/bg__work.png");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 270px 0;
+  padding: 270px 0px;
 }
 
 .works__title {
@@ -317,11 +318,11 @@ header {
   bottom: -85px;
   width: 89.962px;
   height: 221.69px;
-  background-image: url(../img/arrow__work.svg);
+  background-image: url("../img/arrow__work.svg");
 }
 
 .works__disc.arrow-style::before {
-  background-image: url(../img/arrow__work2.svg);
+  background-image: url("../img/arrow__work2.svg");
 }
 
 .works__dics-decoration {
@@ -329,9 +330,9 @@ header {
 }
 
 .work__btn {
-  transition: all .9s;
+  transition: all 0.9s ease 0s;
   color: var(--light-color);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 4px 4px;
   font-size: 1em;
   font-style: normal;
   font-weight: 700;
@@ -352,10 +353,9 @@ header {
   background-color: var(--accent-color);
   display: block;
   padding: 15px;
-  margin: 0 auto;
+  margin: 25px auto 0px;
   color: var(--light-color);
   border-radius: 25px;
-  margin-top: 25px;
   text-align: center;
 }
 
@@ -363,15 +363,23 @@ header {
   padding-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0 48px;
+  gap: 48px;
+  transition: all 0.9s ease-in-out 0s;
 }
 
 .works__container-element {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--btn-color);
   padding: 61px;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.8s ease 0s;
 }
 
-.works__container-title {
+.works__container-title,
+.price__tiltle {
   color: var(--light-color);
   padding-bottom: 25px;
   text-align: center;
@@ -386,8 +394,9 @@ header {
   line-height: normal;
 }
 
-.skilss__disc {
-  padding: 25px 0;
+.skilss__disc,
+.price_disc {
+  padding: 25px 0px;
   color: var(--light-color);
   font-size: 1em;
   font-style: normal;
@@ -403,24 +412,74 @@ header {
 
 .skills__info-elm {
   background-color: var(--accent-color);
-  width: 70%;
+  width: 0;
   height: 20px;
+  transition: all 0.8s ease-in-out;
 }
 
 .skills {
-  padding: 150px 0;
+  padding: 150px 0px;
+}
+
+.price_disc {
+  padding: 5px;
+  text-align: justify;
+}
+
+.price__text {
+  border-radius: 40px;
+  padding: 25px;
+  background-color: var(--btn-color);
+}
+
+.price {
+  padding-bottom: 100px;
+}
+
+.calculator__currency {
+  color: var(--accent-color);
+  font-weight: 900;
 }
 
 .footer__title {
   font-size: 2em;
 }
 
+.calculator {
+  padding: 50px 0;
+}
+
 .footer__list {
   padding-top: 45px;
   display: flex;
-  grid-gap: 0 48px;
+  gap: 0px 48px;
   justify-content: center;
   padding-bottom: 45px;
+}
+
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--main-bg-color);
+  color: white;
+  z-index: 99;
+}
+
+.preloader p{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  transition: all .9s;
+  font-size: 29px;
+}
+
+.preloader p span {
+  color: var(--accent-color);
 }
 
 .footer__list-item {
@@ -429,7 +488,7 @@ header {
 
 .footer__list-link {
   color: var(--light-color);
-  transition: all 0.8s;
+  transition: all 0.8s ease 0s;
 }
 
 .footer__list-link:hover {
@@ -439,18 +498,18 @@ header {
 .find__info-text,
 .cv__info-text {
   position: sticky;
-  transition: all 0.8s;
-  top: 0;
+  transition: all 0.8s ease 0s;
+  top: 0px;
   background-color: var(--dark-color);
   text-align: justify;
-  color: #fff;
+  color: rgb(255, 255, 255);
   line-height: 2em;
-  margin: 50px 0;
+  margin: 50px 0px;
   backdrop-filter: blur(5px);
-  width: 0;
-  height: 0;
+  width: 0px;
+  height: 0px;
   overflow: hidden;
-  padding: 0;
+  padding: 0px;
 }
 
 .find-decoration {
@@ -463,7 +522,85 @@ header {
   font-size: 25px;
   cursor: pointer;
   position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 999; 
+  right: 0px;
+  top: 0px;
+  z-index: 999;
+}
+
+.none {
+  opacity: 0;
+  position: absolute;
+  left: 100%;
+}
+
+.dogs {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  color: var(--light-color);
+  border-radius: 40px;
+  width: 80%;
+  height: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  transition: all 0.8s;
+}
+
+.dogs__active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.dogs::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 40px;
+}
+
+#myVideo {
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  object-fit: cover;
+}
+
+.text {
+  border-radius: 40px;
+  padding: 25px;
+  width: 800px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: justify;
+  color: rgb(230, 46, 13);
+  line-height: 36px;
+  z-index: 2;
+}
+
+.text p {
+  max-width: 800px;
+  font-size: 24px;
+  margin-top: 25px;
+}
+
+.close__btn-dog {
+  cursor: pointer;
+  position: absolute;
+  top: 60px;
+  right: 60px;
+  padding: 25px;
+  text-align: justify;
+  z-index: 99;
+  font-size: 30px;
+  color: pink;
+  border-radius: 50%;
+  background-color: rgba(255, 192, 203, 0.153);
 }
